fixing responsiveness on mobile with background positioning

--- a/src/components/pages/Hero/HeroSection.css
+++ b/src/components/pages/Hero/HeroSection.css
@@ -11,7 +11,7 @@ video {
 }
 
 .hero-container {
-  height: 90vh;
+  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -76,7 +76,12 @@ video {
     font-size: 20px;
   }
 }
-
+@media screen and (max-width: 375px) {
+  .hero-container {
+    width: 100%;
+    height: 85vh;
+  }
+}
 @media screen and (max-width: 368px) {
   .hero-container {
     width: 105%;
